--- a/index.html
+++ b/index.html
@@ -15,48 +15,46 @@
     <div class="row">
       <div class="col-md-6">
         <h2>Register a new account:</h2>
-        <form id="new-contact">
+        <form id="formOne">
           <div class="form-group">
             <label for="name">Name:</label>
             <input type="text" class="form-control" id="name">
-
           </div>
+
           <div class="form-group">
             <label for="initialDeposit">Initial Deposit:</label>
             <input type="text" class="form-control" id="initialDeposit">
-
           </div>
-          <button type="submit" class="btn btn-success">Register</button>
 
+          <button type="submit" class="btn btn-success">Register</button>
         </div>
-        </form>
+      </form>
 
       <div class="col-md-6">
         <h2>Deposit or withdraw funds:</h2>
-        <form id="new-contact">
+        <form id="formTwo">
           <div class="form-group">
             <label for="deposit">Deposit Amount:</label>
             <input type="text" class="form-control" id="deposit">
-
           </div>
+
           <div class="form-group">
             <label for="withdraw">Withdrawal Amount:</label>
             <input type="text" class="form-control" id="withdraw">
           </div>
-          <span class="btn btn-primary" id="add-address">Deposit</span>
 
-          <button type="submit" class="btn btn-success">Withdraw</button><br><br>
+              <button type="submit" class="btn btn-success">Deposit/Withdraw</button>
+
         </div>
-
       </div>
-        </form>
+    </form>
 
     <div class="row">
       <div class="col-md-6">
-        <div class="form-group">
-          <label for="balance">Current Balance:</label>
-          <input type="text" class="form-control" id="balance">
-        </div>
+      <h2>Balance</h2>
+      <p><span class="balance"></span></p>
+
+
       </div>
     </div>
   </div>
