--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
       <div class="col-md-6">
         <h2>Deposit or withdraw funds:</h2>
-        <form id="formTwo">
           <div class="form-group">
             <label for="deposit">Deposit Amount:</label>
             <input type="text" class="form-control" id="deposit">
@@ -43,11 +42,10 @@
             <input type="text" class="form-control" id="withdraw">
           </div>
 
-              <button type="submit" class="btn btn-success">Deposit/Withdraw</button>
+              <button type="submit" id="balance" class="btn btn-success">Deposit/Withdraw</button>
 
         </div>
       </div>
-    </form>
 
     <div class="row">
       <div class="col-md-6">
